fix creator navigation scroller on mobile

--- a/src/assets/styles/mobile/home/section-6-mobile.scss
+++ b/src/assets/styles/mobile/home/section-6-mobile.scss
@@ -25,6 +25,7 @@
                     font-weight: 700;
                     height: 36px;
                     width: 100%;
+                    width: auto;
                     background-color: transparent;
                     &.swiper-pagination-bullet-active {
                         background-color: $green;
