--- a/src/assets/styles/mobile/terms/terms-mobile.scss
+++ b/src/assets/styles/mobile/terms/terms-mobile.scss
@@ -16,7 +16,7 @@
             }
         }
     }
-    .section-6 .section-6-slider.section-6-slider-4 {
+    .section-6 .section-6-slider {
         height: auto;
         
         .section-6-mobile-navigation-scroller {
@@ -29,10 +29,17 @@
             display: flex;
             justify-content: space-between;
             pointer-events: none;
+            
             &>* {
                 pointer-events: all;
                 transition: .25s ease-out;
             }
+        }
+        @at-root .mobile body[id*="creators"] .section-6-mobile-navigation-scroller {
+            left: 0 !important;
+        }
+        @at-root .mobile body[id*="creators"] .swiper-navigation-wrapper {
+            margin-left: 0 !important;
         }
         .swiper-navigation-wrapper {
             height: auto;
@@ -47,9 +54,14 @@
             padding-top: 0;
             margin-left: calc(30px * -1);
             margin-right: calc(30px * -1);
+            
             width: 100vw;
             max-width: none;
             padding-inline: 30px;
+            @at-root .mobile .section-6-slider-3 & {
+                margin-left: 0;
+                margin-right: 0;
+            }
             .swiper-pagination-bullet {
                 padding-inline: 12px;
                 border-block-color: #EBEBEB;
